# YolBi_Lite_Recode

./: .gitignore  README.md  UAC.manifest  YBuild.xml  injection-1.12.2.js  injection-1.12.2.pro  injection-1.8.9.js  injection-1.8.9.pro  launch4j.xml  pom.xml  yolbi.exe4j
Agent/: pom.xml
Agent/src/cn/yapeteam/agent/: Bootstrap.java
Builder/: pom.xml
Builder/src/cn/yapeteam/builder/: Builder.java  Terminal.java  Unzip.java
Convertor/src/: Main.java  Main1.java
Core/: pom.xml
Core-1.12.2/src/: map
Core-1.12.2/src/cn/yapeteam/yolbi/: Loader.java  YolBi.java
Core-1.8.9/src/net/montoyo/mcef/: MCEF.java  (+1 more)
Core-1.8.9/src/org/cef/: CefApp.java  CefSettings.java  OS.java
Core/src/: module-info.java
Injector/: pom.xml
Loader/: pom.xml
Loader/dll/: CMakeLists.txt
Loader/dll/src/dll/: AntiLeak.cpp  AntiLeak.h  Main.c  Native.c  obfusheader.h  unzip.h
Loader/dll/src/inject/: Inject.c
Loader/src/: module-info.java
Minecraft/: .gitignore
Minecraft-1.12.2/: .gitignore
Minecraft-1.8.9/: .gitignore
Minecraft-1.8.9/run/assets/indexes/: 1.8.json
Minecraft-1.8.9/src/: Start.java
Minecraft-1.8.9/src/net/optifine/: BetterGrass.java
Minecraft/src/: Start.java
Minecraft/src/javax/vecmath/: AxisAngle4d.java  AxisAngle4f.java
YMixin/: pom.xml
YMixin/src/: module-info.java
mcef/src/org/cef/: CefApp.java  OS.java
module-infos/core/: module-info.java
resources/mappings/: wrapper.srg
resources/mappings/1.12.2/: forge.srg
resources/web/: index.html  modules.js
resources/web/clickui/: components.js  index.html  panel.js  styles.css  utils.js
(+406 files in other folders)
